--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>ARTEM. – Projects</title>
+    <title>Peer</title>
 
 	<!-- Meta Data -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,7 +45,7 @@
     <!-- Preloader -->
     <div class="preloader">
 	    <div class="preloader__wrap">
-	        <img class="preloader__logo" src="assets/images/logo_white.svg" alt="ARTEM">
+	        <img class="preloader__logo" src="assets/images/peerlogo.png" alt="ARTEM">
 		    <div class="preloader__progress"><span></span></div>
 		</div>
 	</div>
@@ -54,8 +54,8 @@
 	<nav class="navbar">
         <div class="mr-auto logo-container">
             <a class="logo-link" href="index.html">
-                <img class="logotype logotype__front" src="assets/images/logo_white.svg" alt="ARTEM.">
-				<img class="logotype logotype__back" src="assets/images/logo.svg" alt="ARTEM.">
+                <img class="logotype logotype__front" src="assets/images/peerlogo.png" alt="ARTEM.">
+				<img class="logotype logotype__back" src="assets/images/peerlogo.png" alt="ARTEM.">
 			</a>
         </div>
 		<div class="ml-sm-auto">
@@ -221,7 +221,7 @@
     <!-- /Menu -->
 
 	<!-- Demo Menu -->
-	<div class="btnSlideNav slideOpen"></div>
+	
     <div class="btnSlideNav slideClose"></div>
     <ul class="slideNav">
 	    <li class="slideNav__item rtl-mode"><h4 class="title title--5">More pages</h4> <a href="rtl-dark/index.html">RTL</a></li>
