--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>ARTEM. – Contact</title>
+    <title>Peer</title>
 
 	<!-- Meta Data -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,7 +45,7 @@
     <!-- Preloader -->
     <div class="preloader">
 	    <div class="preloader__wrap">
-	        <img class="preloader__logo" src="assets/images/logo_white.svg" alt="ARTEM">
+	        <img class="preloader__logo" src="assets/images/peerlogo.png" alt="ARTEM">
 		    <div class="preloader__progress"><span></span></div>
 		</div>
 	</div>
@@ -54,8 +54,8 @@
 	<nav class="navbar navbar--white">
         <div class="mr-auto logo-container">
             <a class="logo-link" href="index.html">
-                <img class="logotype logotype__front" src="assets/images/logo_white.svg" alt="ARTEM.">
-				<img class="logotype logotype__back" src="assets/images/logo.svg" alt="ARTEM.">
+                <img class="logotype logotype__front" src="assets/images/peerlogo.png" alt="ARTEM.">
+				<img class="logotype logotype__back" src="assets/images/peerlogo.png" alt="ARTEM.">
 			</a>
         </div>
 		<div class="ml-sm-auto">
@@ -133,13 +133,13 @@
 	    <div class="row text-lg-center">
             <ul class="col-12 col-md-12 col-lg-4 col-xl-4 listContact list-unstyled js-lines">
 				<li><h6 class="title title--h6">OFFICE</h6></li>
-				<li>23400 S Western Ave,</li>
-				<li>Harbor City, CA 90710</li>
+				<li>Peergrowth, Po Box No.-393343</li>
+				<li> Dubai, United Arab Emirates</li>
 			</ul>
 			<ul class="col-12 col-md-6 col-lg-4 col-xl-4 listContact list-unstyled js-lines">
 				<li><h6 class="title title--h6">START A CONVERSATION</h6></li>
-				<li>hello@example.com</li>
-                <li>+1 (00) 123-45-67</li>
+				<li>info@peergrowth.net</li>
+                <li>+971 (0) 4 2400 448</li>
 			</ul>
 			<ul class="col-12 col-md-6 col-lg-4 col-xl-4 listContact list-unstyled js-lines">
 				<li><h6 class="title title--h6">FOLLOW US</h6></li>
@@ -171,7 +171,7 @@
     <!-- /Menu -->
 
 	<!-- Demo Menu -->
-	<div class="btnSlideNav slideOpen"></div>
+	
     <div class="btnSlideNav slideClose"></div>
     <ul class="slideNav">
 	    <li class="slideNav__item rtl-mode"><h4 class="title title--5">More pages</h4> <a href="rtl-dark/index.html">RTL</a></li>
