styleold is dark theme

--- a/about_video.html
+++ b/about_video.html
@@ -148,7 +148,7 @@
 		<div class="row">
 			<!-- itemCard -->
 			<div  class="col-12 col-sm-6 col-lg-4 col-xl-3 itemCard">
-			<p style="background-color:#000; padding:20px 30px 30px 30px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quas quis temporibus laboriosam cum nesciunt eaque at. Eos, quaerat, laboriosam? Sapiente quaerat, ipsam nemo alias tempore ipsum commodi dolorum mollitia.</p>	
+			<p style="background-color:#000; padding:20px 30px 30px 30px;color:#fff;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quas quis temporibus laboriosam cum nesciunt eaque at. Eos, quaerat, laboriosam? Sapiente quaerat, ipsam nemo alias tempore ipsum commodi dolorum mollitia.</p>	
 			</div>
 			<!-- /itemCard -->
 			<!-- itemCard -->
@@ -175,7 +175,7 @@
 			<!-- /itemCard -->
 			<!-- itemCard -->
 			<div class="col-12 col-sm-6 col-lg-4 col-xl-3 itemCard">
-				<p style="background-color:#000; padding:20px 30px 30px 30px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores exercitationem, libero, nobis id velit assumenda magnam numquam repellendus hic soluta maxime nulla accusantium alias est qui harum asperiores distinctio eos.</p>
+				<p style="background-color:#000; padding:20px 30px 30px 30px;color:#fff;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores exercitationem, libero, nobis id velit assumenda magnam numquam repellendus hic soluta maxime nulla accusantium alias est qui harum asperiores distinctio eos.</p>
 			</div>
 			<!-- itemCard -->
 		</div>
@@ -351,10 +351,10 @@
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="projects.html"><span>projects</span></a></li>
-			    <li><a class="menu-list__item" href="about_video.html"><span>studio</span></a></li>
-			    <li><a class="menu-list__item" href="news.html"><span>news</span></a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span>contact</span></a></li>
+                <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
+			    <li><a class="menu-list__item" href="about_video.html"><span>About</span></a></li>
+			    <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
+			    <li><a class="menu-list__item" href="contact.html"><span>Contact</span></a></li>
 			</ul>
 		</div>
 		<div class="social social--white">
