--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		                    <h6 class="title title--overhead"><span class="down-up"><span>Peergrowth Research Chronicle</span></span></h6>
 			                <h1 class="title title--display-1 js-text-wave">Research Oriented</h1>
 				            <p class="description"><span class="down-up"><span>Intensive research is our strength and we love what we do.</span></span></p>
-                            <a class="btn-link btn-link--circle-right" href="photo_viewer.html"><span class="down-up"><span>See details<i class="circle circle--right icon-right-open"></i></span></span></a>
+                            <a class="btn-link btn-link--circle-right" href="about_video.html"><span class="down-up"><span>See details<i class="circle circle--right icon-right-open"></i></span></span></a>
 						</div>
 					</div>
 			        <!-- /Caption 3 -->
@@ -161,10 +161,10 @@
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="projects.html"><span>projects</span></a></li>
-			    <li><a class="menu-list__item" href="about_video.html"><span>studio</span></a></li>
-			    <li><a class="menu-list__item" href="news.html"><span>news</span></a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span>contact</span></a></li>
+                <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
+			    <li><a class="menu-list__item" href="about_video.html"><span>About</span></a></li>
+			    <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
+			    <li><a class="menu-list__item" href="contact.html"><span>Contact</span></a></li>
 			</ul>
 		</div>
 		<div class="social social--white">
