--- a/projects.html
+++ b/projects.html
@@ -205,7 +205,7 @@
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="projects.html"><span>projects</span></a></li>
+                <li><a class="menu-list__item" href="projects.html"><span>p</span></a></li>
 			    <li><a class="menu-list__item" href="about_video.html"><span>studio</span></a></li>
 			    <li><a class="menu-list__item" href="news.html"><span>news</span></a></li>
 			    <li><a class="menu-list__item" href="contact.html"><span>contact</span></a></li>
