--- a/contact.html
+++ b/contact.html
@@ -155,10 +155,10 @@
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="projects.html"><span>projects</span></a></li>
-			    <li><a class="menu-list__item" href="about_video.html"><span>studio</span></a></li>
-			    <li><a class="menu-list__item" href="news.html"><span>news</span></a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span>contact</span></a></li>
+                <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
+			    <li><a class="menu-list__item" href="about_video.html"><span>About</span></a></li>
+			    <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
+			    <li><a class="menu-list__item" href="contact.html"><span>Contact</span></a></li>
 			</ul>
 		</div>
 		<div class="social social--white">
