--- a/whatwedo.html
+++ b/whatwedo.html
@@ -69,8 +69,8 @@
     <!-- News -->
 	<div class="container">
 		<header class="header-page">
-            <h1 class="title title--h1 js-lines-l">Projects.</h1>
-			<div class="select js-down">
+            <h1 class="title title--h1 js-lines-l">What we do</h1>
+			<!-- <div class="select js-down">
 			    <span class="placeholder">Select category</span>
 			    <ul class="filters">
 			        <li class="filters__item"><h6 class="title title--overhead filters-title">Categories</h6></li>
@@ -80,18 +80,18 @@
 				    <li class="filters__item" data-filter=".category-app"><a class="filters__link" href="#filter">App</a></li>
 			    </ul>
 			    <input type="hidden" name="changemetoo"/>
-			</div>
+			</div> -->
 		</header>
 		
 	    <div class="grid-news masonry">
             <div class="gutter-sizer"></div>
 		    <!-- Project -->
 		    <figure class="item-project item-masonry js-block category-design">
-			    <a href="projects_single.html" class="onHover">
-				    <img class="item-news__image" src="assets/img/image_project_20.jpg" alt="Project">
+			    <a href="executive.html" class="onHover">
+				    <img class="item-news__image" src="assets/images/Executive search.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
-					    <div class="client">Bloom Agancy</div>
-					    <h3 class="title title--h5">T-Shirt</h3>
+					    <div class="client">We are not in it for white board discussion only, we want to make an impact</div>
+					    <h3 class="title title--h5">Executive Search</h3>
 					</figcaption>
 				</a>
 			</figure>
@@ -100,10 +100,10 @@
 		    <!-- Project -->
 		    <figure class="item-project item-masonry js-block category-branding">
 			    <a href="projects_single_v2.html" class="onHover">
-				    <img class="item-news__image" src="assets/img/image_project_17.jpg" alt="Project">
+				    <img class="item-news__image" src="assets/images/Board consulting.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
-					    <div class="client">Mono Agancy</div>
-					    <h3 class="title title--h5">Advertising booklet</h3>
+					    <div class="client">We aim to enthuse your board with those who bring with them a plethora of ideas</div>
+					    <h3 class="title title--h5">Board Consulting</h3>
 					</figcaption>
 				</a>
 			</figure>
@@ -112,10 +112,10 @@
 		    <!-- Post -->
 		    <figure class="item-project item-masonry js-block category-app">
 			    <a href="projects_single.html" class="onHover">
-				    <img class="item-news__image" src="assets/img/image_project_18.jpg" alt="Project">
+				    <img class="item-news__image" src="assets/images/Peergrowth research chronicle.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
-					    <div class="client">Doodle Club</div>
-					    <h3 class="title title--h5">Printed products</h3>
+					    <div class="client">We look for creating benchmarks so that our clients value us as much as we value them</div>
+					    <h3 class="title title--h5">Peergrowth Research Chronicle</h3>
 					</figcaption>
 				</a>
 			</figure>
@@ -124,34 +124,10 @@
 		    <!-- Post -->
 		    <figure class="item-project item-masonry js-block category-design">
 			    <a href="projects_single_v2.html" class="onHover">
-				    <img class="item-news__image" src="assets/img/image_04.jpg" alt="Project">
+				    <img class="item-news__image" src="assets/images/Training and development.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
-					    <div class="client">Model Agancy</div>
-					    <h3 class="title title--h5">Fashion</h3>
-					</figcaption>
-				</a>
-			</figure>
-		    <!-- /Post -->
-			
-		    <!-- Post -->
-		    <figure class="item-project item-masonry js-block category-branding">
-			    <a href="projects_single.html" class="onHover">
-				    <img class="item-news__image" src="assets/img/image_project_19.jpg" alt="Project">
-				    <figcaption class="onHover__details">
-					    <div class="client">Delta Agancy</div>
-					    <h3 class="title title--h5">Tuletornen</h3>
-					</figcaption>
-				</a>
-			</figure>
-		    <!-- /Post -->
-			
-		    <!-- Post -->
-		    <figure class="item-project item-masonry js-block category-app">
-			    <a href="projects_single_v2.html" class="onHover">
-				    <img class="item-news__image" src="assets/img/image_project_21.jpg" alt="Project">
-				    <figcaption class="onHover__details">
-					    <div class="client">Digital Agancy</div>
-					    <h3 class="title title--h5">Sketch App</h3>
+					    <div class="client">Bespoke training solutions with an unparalleled focus is one of our core strenghts </div>
+					    <h3 class="title title--h5">Training and Development</h3>
 					</figcaption>
 				</a>
 			</figure>
@@ -184,12 +160,12 @@
 	            <div class="col-12 col-md-6 footer__right">
                     <ul class="listContact list-unstyled">
 						<li><h6 class="title title--h6">OFFICE</h6></li>
-					    <li>23400 S Western Ave,<br/>Harbor City, CA 90710</li>
+					    <li>Peergrowth, Po Box No.-393343<br> Dubai, United Arab Emirates</li>
 				    </ul>
 			        <ul class="listContact list-unstyled">
 						<li><h6 class="title title--h6">GET IN TOUCH</h6></li>
-					    <li>hello@example.com</li>
-                        <li>+1 (00) 123-45-67</li>
+					    <li>info@peergrowth.net</li>
+                        <li>+971 (0) 4 2400 448</li>
 				    </ul>
 			        <ul class="listContact list-unstyled">
 						<li><h6 class="title title--h6">FOLLOW US</h6></li>
@@ -200,14 +176,15 @@
 		</div>
 	</footer>
 	<!-- /Footer -->
+	<!-- /Footer -->
 	
 	<!-- Menu -->
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="projects.html"><span>p</span></a></li>
-			    <li><a class="menu-list__item" href="about_video.html"><span>studio</span></a></li>
-			    <li><a class="menu-list__item" href="news.html"><span>news</span></a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span>what we do</span></a></li>
+			    <li><a class="menu-list__item" href="about_video.html"><span>about</span></a></li>
+			    <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
 			    <li><a class="menu-list__item" href="contact.html"><span>contact</span></a></li>
 			</ul>
 		</div>
