--- a/about_video.html
+++ b/about_video.html
@@ -351,10 +351,10 @@
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
-			    <li><a class="menu-list__item" href="about_video.html"><span>About</span></a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span>what we do</span></a></li>
+			    <li><a class="menu-list__item" href="about_video.html"><span>about</span></a></li>
 			    <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span>Contact</span></a></li>
+			    <li><a class="menu-list__item" href="contact.html"><span>contact</span></a></li>
 			</ul>
 		</div>
 		<div class="social social--white">
