--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span>what we do</span></a></li>
 			    <li><a class="menu-list__item" href="about_video.html"><span>About</span></a></li>
 			    <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
 			    <li><a class="menu-list__item" href="contact.html"><span>Contact</span></a></li>
