--- a/contact.html
+++ b/contact.html
@@ -156,8 +156,8 @@
         <div class="menu-inner">
 		    <ul class="menu-list">
                 <li><a class="menu-list__item" href="whatwedo.html"><span>what we do</span></a></li>
-			    <li><a class="menu-list__item" href="about_video.html"><span>About</span></a></li>
-			    <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
+			    <li><a class="menu-list__item" href="about_video.html"><span>about</span></a></li>
+			    <li><a class="menu-list__item" href="speak.html"><span>others speak</span></a></li>
 			    <li><a class="menu-list__item" href="contact.html"><span>Contact</span></a></li>
 			</ul>
 		</div>
