--- a/about_video.html
+++ b/about_video.html
@@ -67,11 +67,14 @@
 	<!-- /Top -->
 
     <!-- Intro -->
-	<header class="header-page header-fullscreen header-page--gutterBottom overlay overlay--80 jarallaxVideo" data-jarallax-video="mp4:../assets/img/abstract.mp4">
+	<header class="header-page header-fullscreen overlay">
+		<div class="wrap-bg">    
+			<div class="js-image jarallax" data-image="assets/img/fullscreen_slider_image_03.jpg"></div>
+		</div>
 		<div class="header-page__container-fluid align-items-end js-opacity">
 			<div class="row no-gutters">
 				<div class="col-md-12 col-lg-6">
-					<div class="tail header-page__description">Design is not just what it looks like and feels like. Design is how it works.</div>
+					<div class="tail header-page__description">"Every good conversation starts with listening"<br>-Tom Haak.</div>
 				</div>
 				<div class="col-md-12 col-lg-6 text-lg-right">
 					<a class="btn-link btn-link--circle-right" href="!#start">THE STORY<i class="circle circle--white circle--right icon-down-open"></i></a>
@@ -181,6 +184,40 @@
 		</div>
 	</div>
     <!-- /Team -->
+    <!-- Slider -->
+    <div class="row">
+    <div class="col-lg-8">
+		<div class="slider slider-simply"> 		
+		    <div class="slider-article swiper-container">
+                <div class="swiper-wrapper">
+			        <div class="swiper-slide">
+						<div class="cover-slider" data-bg="assets/img/08_open_menu.jpg"></div>
+					</div>
+			        <div class="swiper-slide">
+						<div class="cover-slider" data-bg="assets/img/9_news.jpg"></div>
+					</div>
+			        <div class="swiper-slide">
+						<div class="cover-slider" data-bg="assets/img/06_about_us.jpg"></div>
+					</div>
+		        </div>
+			</div>
+			<div class="control-slider control-slider--bottom swiper-control">
+                <div class="swiper-button-next swiper-button-next--square zoom-cursor">
+                    <i class="icon-up-open"></i>
+				</div>
+				<div class="swiper-button-prev swiper-button-prev--square zoom-cursor">
+                    <i class="icon-down-open"></i>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div style="padding-top:120px;" class="container col-lg-4">
+		
+				<p style="text-align:center;">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, quidem?</p>
+		
+	</div>
+</div>
+	<!-- /Slider -->
 
     <!-- Awards -->
 	<article class="caption-single container">
@@ -353,7 +390,7 @@
 		    <ul class="menu-list">
                 <li><a class="menu-list__item" href="whatwedo.html"><span>what we do</span></a></li>
 			    <li><a class="menu-list__item" href="about_video.html"><span>about</span></a></li>
-			    <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
+			    <li><a class="menu-list__item" href="speak.html"><span>others speak</span></a></li>
 			    <li><a class="menu-list__item" href="contact.html"><span>contact</span></a></li>
 			</ul>
 		</div>
