--- a/speak.html
+++ b/speak.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Peer</title>
+    <title>Peergrowth</title>
 
 	<!-- Meta Data -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,9 +51,9 @@
 	</div>
 
     <!-- Top -->
-	<nav class="navbar navbar-back">
+	<nav class="navbar navbar-back navbar--white navbar-change">
         <div class="mr-auto logo-container">
-		    <a class="btn-link" href="whatwedo.html"><i class="circle icon-left-open"></i></a>
+		    <a class="btn-link" href="#"><i class="circle icon-left-open"></i></a>
             <a class="logo-link" href="index.html">
 				<img class="logotype" src="assets/images/peerlogo.png" alt="ARTEM.">
 			</a>
@@ -68,119 +68,86 @@
 
     <section class="project-single">
 	    <!-- Intro -->
-	    <header class="header-page header-page--half js-opacity">
-		    <div class="container">
-			    <!-- Title -->
-	            <h6 class="title title--overhead title--tail">What we do</h6>
-		        <h1 class="title title--display-1 js-words">Executive Search</h1>
-			    <!-- /Title -->
-			</div>
-		</header>
-        <!-- /Intro -->
-		
-		<!-- Image -->
-		<figure class="image-container jarallax reveal">
-			<img class="jarallax-img cover" src="assets/img/cover-project.jpg" alt="" />
-		</figure>
-		<!-- /Image -->
-        
-		<div class="container">
-			<!-- Details -->
-			<div class="case-details">
-                <div class="item-details">
-					<span class="item-details__title title--overhead">We</span>
-					<span class="item-details__text">Connect</span>
-				</div>
-                <div class="item-details">
-					<span class="item-details__title title--overhead">We</span>
-					<span class="item-details__text">Collaborate</span>
-				</div>
-			    <div class="item-details">
-					<span class="item-details__title title--overhead">We are</span>
-					<span class="item-details__text">Relantless</span>
-				</div>
-				<div class="item-details">
-					<span class="item-details__title title--overhead">We are</span>
-					<span class="item-details__text">Focussed</span>
-				</div>
-			</div>
-			<!-- /Details -->		
+	<header class="header-page header-fullscreen overlay">
+		<div class="wrap-bg">    
+			<div class="js-image jarallax" data-image="assets/img/fullscreen_slider_image_03.jpg"></div>
 		</div>
-		
-		<article class="caption-single container">
-            <div class="row">
-		        <div class="col-12 col-lg-2"><span class="num-article">01 —</span></div>
-			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">Research is to see what everybody else has seen, and to think what nobody else has thought</h2>
-				    <div class="description js-block">
-				        <p>It is our steadfast belief research forms the crux of every successful venture. We at Peer growth, take great care to ensure that in every endeavour that we undertake, however big or small, foolproof research forms the guidelines to ensure our goals are met.</p>
-			        </div>
-			    </div>
-		    </div>
-		</article>
-		
-		<!-- Image -->
-		<figure class="image-container image-container--gutters reveal">
-			<img class="cover" src="assets/img/06_about_us.jpg" alt="" />
-		</figure>
-		<!-- /Image -->
-		
-		<article class="caption-single container">
-            <div class="row">
-		        <div class="col-12 col-lg-2"><span class="num-article">02 —</span></div>
-			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">When you believe a thing, believe it all the way, implicitly and unquestionably.</h2>
-				    <div class="description js-block">
-				        <p>Good designers must always be avant-gardists, always one step ahead of the times. They should–and must–question everything generally thought to be obvious. They must have an intuition for people’s changing attitudes. For the reality in which they live, for their dreams, their desires, their worries, their needs, their living habits. They must also be able to assess realistically the opportunities and bounds of technology.</p>
-			        </div>
-			    </div>
-		    </div>
-		</article>
-		
-		<!-- Slider -->
-		<div class="slider slider-simply image-container--half reveal">
-		    <div class="slider-article swiper-container">
-                <div class="swiper-wrapper">
-			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/08_open_menu.jpg"></div>
-					</div>
-			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/9_news.jpg"></div>
-					</div>
-			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/06_about_us.jpg"></div>
-					</div>
-		        </div>
-			</div>
-
-			<div class="control-slider control-slider--bottom swiper-control">
-                <div class="swiper-button-next swiper-button-next--square zoom-cursor">
-                    <i class="icon-up-open"></i>
+		<div class="header-page__container-fluid align-items-end js-opacity">
+			<div class="row no-gutters">
+				<div class="col-md-12 col-lg-6">
+					<div class="tail header-page__description">Human resources isn't a thing we do. It's the thing that runs our business.</div>
 				</div>
-				<div class="swiper-button-prev swiper-button-prev--square zoom-cursor">
-                    <i class="icon-down-open"></i>
+				<div class="col-md-12 col-lg-6 text-lg-right">
+					<a class="btn-link btn-link--circle-right" href="!#start">THE STORY<i class="circle circle--white circle--right icon-down-open"></i></a>
 				</div>
 			</div>
 		</div>
-		<!-- /Slider -->
-
-		<article class="caption-single container">
+	</header>
+    <!-- /Intro -->
+		
+		<article id="start" class="caption-single container">
             <div class="row">
-		        <div class="col-12 col-lg-2"><span class="num-article">03 —</span></div>
-			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">Design is a solution to a problem. Art is a question to a problem.</h2>
+		        <div class="col-12 col-lg-4">
+			        <h4 class="title title--h4 js-lines"><span class="num-article num-article--light">01.</span>  A multi billion dollar Healthcare group</h4>
+			    </div>
+			    <div class="col-12 col-lg-8">
 				    <div class="description js-block">
-				        <p>The future belongs to a different kind of person with a different kind of mind: artists, inventors, storytellers-creative and holistic ‘right-brain’ thinkers whose abilities mark the fault line between who gets ahead and who doesn’t.</p>
+				        <p>"Peergrowth has helped us onboard some very key team members for the corporate team. As a service provider Peergrowth evaluates the organizations needs very objectively to ensure we get the best return for our efforts. They always ensure a very clear understanding of the business and competencies required for the roles. Despite some challenging roles and timelines at hand, the sourcing and interview process has always been seamless. Their partners are extremely sharp and have a long-term vision when recruiting candidates."</p>
 			        </div>
 			    </div>
 		    </div>
 		</article>
 		
 		<!-- Image -->
-		<figure class="image-container reveal">
-			<img class="cover" src="assets/img/fullscreen_slider_image_03.jpg" alt="" />
+		<figure class="image-container gallery-two reveal">
+			<div class="gallery-two__item">
+			    <img class="cover" src="assets/img/image_project_22.jpg" alt="" />
+				<div class="text-overlay text-overlay--left-bottom">minimal</div>
+			</div>
+			<div class="gallery-two__item"><img class="cover" src="assets/img/image_project_19.jpg" alt="" /></div>
 		</figure>
 		<!-- /Image -->
+		
+		<article class="caption-single container">
+            <div class="row">
+		        <div class="col-12 col-lg-4">
+			        <h4 class="title title--h4 js-lines"><span class="num-article num-article--light">02.</span>  A reputed Aviation group.</h4>
+			    </div>
+			    <div class="col-12 col-lg-8">
+				    <div class="description js-block">
+				        <p>"Peergrowth has provided us with a tailored recruitment service through comprehensive understanding of our culture and service needs. This personalised approach goes a long way in meeting our needs and successfully identified people for our Organisation".</p>
+			        </div>
+			    </div>
+		    </div>
+		</article>
+		
+		<!-- Image -->
+		<figure class="image-container container gallery-two">
+			<div class="gallery-two__item gallery-two__item--irregular reveal">
+			    <span class="note">Have no fear of perfection</span>
+				<img class="cover" src="assets/img/image_04.jpg" alt="" />
+			</div>
+            <div class="gallery-two__item gallery-two__item--irregular-right reveal">
+			   <img class="cover" src="assets/img/image_project_01.jpg" alt="" />
+			   <div class="text-overlay text-overlay--left-bottom">br</div>
+			</div>
+		</figure>
+		<!-- /Image -->
+
+		<article class="caption-single container">
+            <div class="row">
+		        <div class="col-12 col-lg-4">
+			        <h4 class="title title--h4 js-lines"><span class="num-article num-article--light">03.</span> A massive family conglomerate</h4>
+			    </div>
+			    <div class="col-12 col-lg-8">
+				    <div class="description js-block">
+				        <p>"I find Abhishek to be very engaging, dependable and high in integrity, he works with a wide network of well-qualified individuals across a range of job disciplines. What I value the most is that he always listens but is never afraid to push back when he feels that someone is the right fit for our business. Having a partnership with Abhishek and Peergrowth has significantly improved our time-to-hire on key roles over the past six months. He is very effective at his job and it’s a pleasure to recommend him as an accomplished recruiting professional."</p>
+			        </div>
+			    </div>
+		    </div>
+		</article>
+		
+		
 		
 		<div class="caption-single container">
 		    <div class="row">
@@ -196,7 +163,10 @@
 		</div>
 		
 		<!-- Page nav -->
-		  
+		    <nav class="page-nav">
+			    <a class="btn-link" href="#"><i class="circle circle--left icon-left-open"></i>Prev project</a>
+				<a class="btn-link" href="#">Next project<i class="circle circle--right icon-right-open"></i></a>
+			</nav>
 		<!-- /Page nav -->
 	</section>
     <!-- /Intro -->
