--- a/whatwedo.html
+++ b/whatwedo.html
@@ -184,7 +184,7 @@
 		    <ul class="menu-list">
                 <li><a class="menu-list__item" href="whatwedo.html"><span>what we do</span></a></li>
 			    <li><a class="menu-list__item" href="about_video.html"><span>about</span></a></li>
-			    <li><a class="menu-list__item" href="#"><span>Test</span></a></li>
+			    <li><a class="menu-list__item" href="speak.html"><span>others speak</span></a></li>
 			    <li><a class="menu-list__item" href="contact.html"><span>contact</span></a></li>
 			</ul>
 		</div>
