new pages and logo

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <!-- Preloader -->
     <div class="preloader">
 	    <div class="preloader__wrap">
-	        <img class="preloader__logo" src="assets/images/peerlogo.png" alt="ARTEM">
+	        <img class="preloader__logo" src="assets/images/peerlogowh.png" alt="ARTEM">
 		    <div class="preloader__progress"><span></span></div>
 		</div>
 	</div>
@@ -54,8 +54,8 @@
 	<nav class="navbar navbar--white">
         <div class="mr-auto logo-container">
             <a class="logo-link" href="index.html">
-                <img class="logotype logotype__front" src="assets/images/peerlogo.png" alt="ARTEM.">
-				<img class="logotype logotype__back" src="assets/images/peerlogo.png" alt="ARTEM.">
+                <img class="logotype logotype__front" src="assets/images/peerlogobl.png" alt="ARTEM.">
+				<img class="logotype logotype__back" src="assets/images/peerlogowh.png" alt="ARTEM.">
 			</a>
         </div>
 		<div class="ml-sm-auto">
