--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Preloader -->
     <div class="preloader">
 	    <div class="preloader__wrap">
-	        <img class="preloader__logo" src="assets/images/peerlogo.png" alt="ARTEM">
+	        <img class="preloader__logo" src="assets/images/peerlogowh.png" alt="ARTEM">
 		    <div class="preloader__progress"><span></span></div>
 		</div>
 	</div>
@@ -54,8 +54,8 @@
 	<nav class="navbar">
         <div class="mr-auto logo-container">
             <a class="logo-link" href="index.html">
-                <img class="logotype logotype__front" src="assets/images/peerlogo.png" alt="ARTEM.">
-				<img class="logotype logotype__back" src="assets/images/peerlogo.png" alt="ARTEM.">
+                <img class="logotype logotype__front" src="assets/images/peerlogobl.png" alt="ARTEM.">
+				<img class="logotype logotype__back" src="assets/images/peerlogowh.png" alt="ARTEM.">
 			</a>
         </div>
 		<div class="ml-sm-auto">
@@ -74,8 +74,10 @@
 			        <!-- Caption 1 -->
 			        <div class="swiper-slide">
 					    <div class="slider__item">
-						    <h6 class="title title--overhead"><span class="down-up"><span>Executive Search</span></span></h6>
-			                <h1 class="title title--display-1 js-text-wave">Global Reach</h1>
+						    <h6 class="title title--overhead"><span class="down-up"><span>Executive Search&nbsp;<img style="width:50px;height:50px;" src="assets/images/Globalreach.png"></span></span></h6>
+			                <h1 class="title title--display-1 js-text-wave">Global Reach
+			                </h1>
+							
 				            <p class="description"><span class="down-up"><span>A customised approach is taken upon as organisations have different values.</span></span></p>
                             <a class="btn-link btn-link--circle-right" href="photo_viewer.html"><span class="down-up"><span>See details<i class="circle circle--right icon-right-open"></i></span></span></a>
 						</div>
@@ -85,7 +87,7 @@
 			        <!-- Caption 2 -->
 			        <div class="swiper-slide">
 					    <div class="slider__item">
-		                    <h6 class="title title--overhead"><span class="down-up"><span>Board Consulting</span></span></h6>
+		                    <h6 class="title title--overhead"><span class="down-up"><span>Board Consulting&nbsp; <img style="width:50px;height:50px;" src="assets/images/Valuedriven.png"></span></span></h6>
 			                <h1 class="title title--display-1 js-text-wave">Value Driven</h1>
 				            <p class="description"><span class="down-up"><span>We consistently track movements through our internal research team and global network to get you the desired candidate. </span></span></p>
                             <a class="btn-link btn-link--circle-right" href="photo_viewer.html"><span class="down-up"><span>See details<i class="circle circle--right icon-right-open"></i></span></span></a>
@@ -96,7 +98,8 @@
 			        <!-- Caption3  -->
 			        <div class="swiper-slide">
 					    <div class="slider__item">
-		                    <h6 class="title title--overhead"><span class="down-up"><span>Peergrowth Research Chronicle</span></span></h6>
+		                    <h6 class="title title--overhead"><span class="down-up"><span>Peergrowth Research
+		                     Chronicle&nbsp;<img style="width:50px;height:50px;" src="assets/images/Research oriented.png"></span></span></h6>
 			                <h1 class="title title--display-1 js-text-wave">Research Oriented</h1>
 				            <p class="description"><span class="down-up"><span>Intensive research is our strength and we love what we do.</span></span></p>
                             <a class="btn-link btn-link--circle-right" href="about_video.html"><span class="down-up"><span>See details<i class="circle circle--right icon-right-open"></i></span></span></a>
@@ -161,16 +164,18 @@
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="whatwedo.html"><span>what we do</span></a></li>
-			    <li><a class="menu-list__item" href="about_video.html"><span>about</span></a></li>
-			    <li><a class="menu-list__item" href="speak.html"><span>Test</span>others speak</a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span>Contact</span></a></li>
+                <li><a class="menu-list__item" href="about_video.html"><span>Our story</span></a>
+                </li>
+			    <li><a class="menu-list__item" href="whatwedo.html"><span>Our expertise</span></a></li>
+			    <li><a class="menu-list__item" href="speak.html"><span>Clients speaking</span></a></li>
+			    <li><a class="menu-list__item" href="contact.html"><span>Lets interact</span></a></li>
 			</ul>
+
 		</div>
 		<div class="social social--white">
-		  <a class="social__link" href="#">FB</a>
-		  <a class="social__link" href="#">TW</a>
-		  <a class="social__link" href="#">IG</a>
+		  <a class="social__link" href="#">We understand</a>
+		  <a class="social__link" href="#">We interpret</a>
+		  <a class="social__link" href="#">We execute</a>
 		</div>
 	</div>
 	<div class="ef-background"></div>
