--- a/peergrowthresearchchronicle.html
+++ b/peergrowthresearchchronicle.html
@@ -201,6 +201,7 @@
 	</section>
     <!-- /Intro -->
 
+	<!-- Menu -->
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
