--- a/about_video.html
+++ b/about_video.html
@@ -45,7 +45,7 @@
     <!-- Preloader -->
     <div class="preloader">
 	    <div class="preloader__wrap">
-	        <img class="preloader__logo" src="assets/images/peerlogo.png" alt="ARTEM">
+	        <img class="preloader__logo" src="assets/images/peerlogowh.png" alt="ARTEM">
 		    <div class="preloader__progress"><span></span></div>
 		</div>
 	</div>
@@ -54,8 +54,8 @@
 	<nav class="navbar navbar--white">
         <div class="mr-auto logo-container">
             <a class="logo-link" href="index.html">
-                <img class="logotype logotype__front" src="assets/images/peerlogo.png" alt="ARTEM.">
-				<img class="logotype logotype__back" src="assets/images/peerlogo.png" alt="ARTEM.">
+                <img class="logotype logotype__front" src="assets/images/peerlogobl.png" alt="ARTEM.">
+				<img class="logotype logotype__back" src="assets/images/peerlogowh.png" alt="ARTEM.">
 			</a>
         </div>
 		<div class="ml-sm-auto">
@@ -384,24 +384,24 @@
 	</footer>
 	<!-- /Footer -->
 	
-	<!-- Menu -->
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="whatwedo.html"><span>what we do</span></a></li>
-			    <li><a class="menu-list__item" href="about_video.html"><span>about</span></a></li>
-			    <li><a class="menu-list__item" href="speak.html"><span>others speak</span></a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span>contact</span></a></li>
+                <li><a class="menu-list__item" href="about_video.html"><span>Our story</span></a>
+                </li>
+			    <li><a class="menu-list__item" href="whatwedo.html"><span>Our expertise</span></a></li>
+			    <li><a class="menu-list__item" href="speak.html"><span>Clients speaking</span></a></li>
+			    <li><a class="menu-list__item" href="contact.html"><span>Lets interact</span></a></li>
 			</ul>
+
 		</div>
 		<div class="social social--white">
-		  <a class="social__link" href="#">FB</a>
-		  <a class="social__link" href="#">TW</a>
-		  <a class="social__link" href="#">IG</a>
+		  <a class="social__link" href="#">We understand</a>
+		  <a class="social__link" href="#">We interpret</a>
+		  <a class="social__link" href="#">We execute</a>
 		</div>
 	</div>
 	<div class="ef-background"></div>
-    <!-- /Menu -->
 
 	<!-- Demo Menu -->
 	
