--- a/whatwedo.html
+++ b/whatwedo.html
@@ -99,7 +99,7 @@
 			
 		    <!-- Project -->
 		    <figure class="item-project item-masonry js-block category-branding">
-			    <a href="projects_single_v2.html" class="onHover">
+			    <a href="boardconsulting.html" class="onHover">
 				    <img class="item-news__image" src="assets/images/Board consulting.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">We aim to enthuse your board with those who bring with them a plethora of ideas</div>
@@ -111,7 +111,7 @@
 			
 		    <!-- Post -->
 		    <figure class="item-project item-masonry js-block category-app">
-			    <a href="projects_single.html" class="onHover">
+			    <a href="peergrowthresearchchronicle.html" class="onHover">
 				    <img class="item-news__image" src="assets/images/Peergrowth research chronicle.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">We look for creating benchmarks so that our clients value us as much as we value them</div>
@@ -123,7 +123,7 @@
 			
 		    <!-- Post -->
 		    <figure class="item-project item-masonry js-block category-design">
-			    <a href="projects_single_v2.html" class="onHover">
+			    <a href="traininganddevelop.html" class="onHover">
 				    <img class="item-news__image" src="assets/images/Training and development.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">Bespoke training solutions with an unparalleled focus is one of our core strenghts </div>
