banner and content

--- a/boardconsulting.html
+++ b/boardconsulting.html
@@ -71,8 +71,8 @@
 	    <header class="header-page header-page--half js-opacity">
 		    <div class="container">
 			    <!-- Title -->
-	            <h6 class="title title--overhead title--tail">What we do</h6>
-		        <h1 class="title title--display-1 js-words">Executive Search</h1>
+	            <h6 class="title title--overhead title--tail">Our Expertise</h6>
+		        <h1 class="title title--display-1 js-words">Board Consulting</h1>
 			    <!-- /Title -->
 			</div>
 		</header>
@@ -80,7 +80,7 @@
 		
 		<!-- Image -->
 		<figure class="image-container jarallax reveal">
-			<img class="jarallax-img cover" src="assets/img/cover-project.jpg" alt="" />
+			<img class="jarallax-img cover" src="assets/images/board-banner.jpg" alt="" />
 		</figure>
 		<!-- /Image -->
         
@@ -111,9 +111,9 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">01 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">Research is to see what everybody else has seen, and to think what nobody else has thought</h2>
+			        <h2 class="title title--h4 js-lines">The board of every company is an invincible force to be reckoned with.</h2>
 				    <div class="description js-block">
-				        <p>It is our steadfast belief research forms the crux of every successful venture. We at Peer growth, take great care to ensure that in every endeavour that we undertake, however big or small, foolproof research forms the guidelines to ensure our goals are met.</p>
+				        <p> We at Peer Growth, not only acknowledge this importance, but have made several efforts to bring together leading Multinationals and Family Businesses across the globe, in order to assist in finding Independent and Non-Independent Directors.</p>
 			        </div>
 			    </div>
 		    </div>
@@ -129,9 +129,9 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">02 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">When you believe a thing, believe it all the way, implicitly and unquestionably.</h2>
+			        <h2 class="title title--h4 js-lines"> Let us make it simpler for your Board to make easy, pertinent and valuable solutions, by bringing in the buoyancy it needs!</h2>
 				    <div class="description js-block">
-				        <p>Good designers must always be avant-gardists, always one step ahead of the times. They should–and must–question everything generally thought to be obvious. They must have an intuition for people’s changing attitudes. For the reality in which they live, for their dreams, their desires, their worries, their needs, their living habits. They must also be able to assess realistically the opportunities and bounds of technology.</p>
+				        <p>It is of pivotal importance to have a definite and resourceful Board set up, to make sure that the company’s long term goals are on track, along with its day to day functions, with strict adherence to their respective company policies.</p>
 			        </div>
 			    </div>
 		    </div>
@@ -168,9 +168,11 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">03 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">Design is a solution to a problem. Art is a question to a problem.</h2>
+			        <h2 class="title title--h4 js-lines">What we offer:</h2>
 				    <div class="description js-block">
-				        <p>The future belongs to a different kind of person with a different kind of mind: artists, inventors, storytellers-creative and holistic ‘right-brain’ thinkers whose abilities mark the fault line between who gets ahead and who doesn’t.</p>
+				        <p><ul><li>Board Level Searches</li>
+				        	<li>Leadership Successions</li>
+				        	</ul></p>
 			        </div>
 			    </div>
 		    </div>
