--- a/executive.html
+++ b/executive.html
@@ -71,7 +71,7 @@
 	    <header class="header-page header-page--half js-opacity">
 		    <div class="container">
 			    <!-- Title -->
-	            <h6 class="title title--overhead title--tail">What we do</h6>
+	            <h6 class="title title--overhead title--tail">Our Expertise</h6>
 		        <h1 class="title title--display-1 js-words">Executive Search</h1>
 			    <!-- /Title -->
 			</div>
@@ -80,7 +80,7 @@
 		
 		<!-- Image -->
 		<figure class="image-container jarallax reveal">
-			<img class="jarallax-img cover" src="assets/img/cover-project.jpg" alt="" />
+			<img class="jarallax-img cover" src="assets/images/exec-banner.jpg" alt="" />
 		</figure>
 		<!-- /Image -->
         
@@ -111,9 +111,9 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">01 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">Research is to see what everybody else has seen, and to think what nobody else has thought</h2>
+			        <h2 class="title title--h4 js-lines">We are here to match the right human to fit into your organisational needs!</h2>
 				    <div class="description js-block">
-				        <p>It is our steadfast belief research forms the crux of every successful venture. We at Peer growth, take great care to ensure that in every endeavour that we undertake, however big or small, foolproof research forms the guidelines to ensure our goals are met.</p>
+				        <p>At the leadership of every firm, stand those individuals that the entire firm looks up to. To ensure we find the right individual, that fits the firm like a glove, we not only research above and beyond every candidate’s resume, but also take care of reaching every goal set by the organisation in question, to support their human capital requirements.</p>
 			        </div>
 			    </div>
 		    </div>
@@ -129,9 +129,9 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">02 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">When you believe a thing, believe it all the way, implicitly and unquestionably.</h2>
+			        <h2 class="title title--h4 js-lines"> Behind all those computers, stand humans who make the firm a better place to work at!.</h2>
 				    <div class="description js-block">
-				        <p>Good designers must always be avant-gardists, always one step ahead of the times. They should–and must–question everything generally thought to be obvious. They must have an intuition for people’s changing attitudes. For the reality in which they live, for their dreams, their desires, their worries, their needs, their living habits. They must also be able to assess realistically the opportunities and bounds of technology.</p>
+				        <p> Unlike the traditional ways of recruitment, we walk several extra miles to ensure that our core values reflect in our search and help churn out the perfect candidate for every organisation that there is.</p>
 			        </div>
 			    </div>
 		    </div>
@@ -168,9 +168,9 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">03 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">Design is a solution to a problem. Art is a question to a problem.</h2>
+			        <h2 class="title title--h4 js-lines"> At Peergrowth, we specialise in Board & CEO/CXO level searches.</h2>
 				    <div class="description js-block">
-				        <p>The future belongs to a different kind of person with a different kind of mind: artists, inventors, storytellers-creative and holistic ‘right-brain’ thinkers whose abilities mark the fault line between who gets ahead and who doesn’t.</p>
+				        <p>Our trusted team of consultants work tirelessly to reach out to top performers across industries to understand their aspirations and what drives them as individuals. This first-hand knowledge helps us in aligning the interest of our candidates with what our clients have to offer, thereby making this process a breeze.</p>
 			        </div>
 			    </div>
 		    </div>
