--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 			        <div class="swiper-slide">
 					    <div class="slider__item">
 						    <h6 class="title title--overhead"><span class="down-up"><span>Executive Search&nbsp;<img style="width:50px;height:50px;" src="assets/images/Globalreach.png"></span></span></h6>
-			                <h1 class="title title--display-1 js-text-wave">Global Reach
+			                <h1 class="title title--display-1 js-text-wave">We are everywhere
 			                </h1>
 							
-				            <p class="description"><span class="down-up"><span>A customised approach is taken upon as organisations have different values.</span></span></p>
+				            <p class="description"><span class="down-up"><span>: Our global reach brings a pool of talent - an eclectic cohort of highly skilled, professional, talented and dependable individuals, from across the globe that can be the fresh breath of change an organisation is looking for!</span></span></p>
                             <a class="btn-link btn-link--circle-right" href="photo_viewer.html"><span class="down-up"><span>See details<i class="circle circle--right icon-right-open"></i></span></span></a>
 						</div>
 					</div>
@@ -88,8 +88,8 @@
 			        <div class="swiper-slide">
 					    <div class="slider__item">
 		                    <h6 class="title title--overhead"><span class="down-up"><span>Board Consulting&nbsp; <img style="width:50px;height:50px;" src="assets/images/Valuedriven.png"></span></span></h6>
-			                <h1 class="title title--display-1 js-text-wave">Value Driven</h1>
-				            <p class="description"><span class="down-up"><span>We consistently track movements through our internal research team and global network to get you the desired candidate. </span></span></p>
+			                <h1 class="title title--display-1 js-text-wave">Values at the core</h1>
+				            <p class="description"><span class="down-up"><span>We are accountable both individually and collectively, as we operate firmly on four values - Honesty, Integrity, Transparency and Accountability. </span></span></p>
                             <a class="btn-link btn-link--circle-right" href="photo_viewer.html"><span class="down-up"><span>See details<i class="circle circle--right icon-right-open"></i></span></span></a>
 						</div>
 					</div>
@@ -100,8 +100,8 @@
 					    <div class="slider__item">
 		                    <h6 class="title title--overhead"><span class="down-up"><span>Peergrowth Research
 		                     Chronicle&nbsp;<img style="width:50px;height:50px;" src="assets/images/Research oriented.png"></span></span></h6>
-			                <h1 class="title title--display-1 js-text-wave">Research Oriented</h1>
-				            <p class="description"><span class="down-up"><span>Intensive research is our strength and we love what we do.</span></span></p>
+			                <h1 class="title title--display-1 js-text-wave">We C beyond CV's</h1>
+				            <p class="description"><span class="down-up"><span>We take the candidature of every prospective applicant with utmost seriousness, and research about them beyond their resumes. Because, we know the value of a cultural fit! </span></span></p>
                             <a class="btn-link btn-link--circle-right" href="about_video.html"><span class="down-up"><span>See details<i class="circle circle--right icon-right-open"></i></span></span></a>
 						</div>
 					</div>
