--- a/about_video.html
+++ b/about_video.html
@@ -91,9 +91,9 @@
 			    <h4 class="title title--overhead js-lines">The story</h4>
 			</div>
 			<div class="col-12 col-lg-9">
-				<h2 class="title title--h4 js-lines">Instead of waiting for a leader you can believe in, try this: Become a leader you can believe in.</h2>
+				<h2 class="title title--h4 js-lines"> We firmly believe that, the right leader can be the like the metaphorical glue, that could make the entire capital stick to the firm!.</h2>
 				<div class="description noGutters-Bottom js-block">
-				    <p class="paragraph noGutters-Bottom">We believe people are the most vital element of an organization hence we instill a knowledge driven approach to our work and an open mind to connect with professionals globally. We are a trusted partner to our clients at all times and in exchange get to do some well-recognized work consistently.</p>
+				    <p class="paragraph noGutters-Bottom">In a world of seemingly saturated competition across industries, there is novelty brimming in every corner of the world, every single day. New talent is on the hunt, and newer talent is on the rise. We, at Peer Growth, believe that the need for the right talent to match with the right culture is an underestimated yet one of the most requisite pillars for global success, for any organisation. </p>
 			    </div>
 			</div>
 		</div>
@@ -107,9 +107,9 @@
 			    <h4 class="title title--overhead js-lines">What we do?</h4>
 			</div>
 			<div class="col-12 col-lg-9">
-				<h2 class="title title--h4 js-lines">You can expect no influence if you are not susceptible to influence</h2>
+				<h2 class="title title--h4 js-lines"> It always lies in the search. The destination would else be a thing of imagination!</h2>
 				<div class="description js-block">
-				    <p class="paragraph">We are a trusted management consulting firm with a key focus on Search and Advisory solutions. Our purpose is to engage with leading organizations and support their human capital needs</p>
+				    <p class="paragraph">Peer Growth is a trusted management consulting firm, with Search and Advisory Solutions as its key solutions. We constantly engage with leading organisations to ensure that their human capital teams, get their right fit. While the world may forget that human comes before capital, we are here to remind that and humanise this process, and transform it into a long standing relationship.</p>
 			    </div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4 offset-lg-3 ">
