--- a/peergrowthresearchchronicle.html
+++ b/peergrowthresearchchronicle.html
@@ -71,8 +71,8 @@
 	    <header class="header-page header-page--half js-opacity">
 		    <div class="container">
 			    <!-- Title -->
-	            <h6 class="title title--overhead title--tail">What we do</h6>
-		        <h1 class="title title--display-1 js-words">Executive Search</h1>
+	            <h6 class="title title--overhead title--tail">Our Expertise</h6>
+		        <h1 class="title title--display-1 js-words">Peergrowth Research Chronicle</h1>
 			    <!-- /Title -->
 			</div>
 		</header>
@@ -80,7 +80,7 @@
 		
 		<!-- Image -->
 		<figure class="image-container jarallax reveal">
-			<img class="jarallax-img cover" src="assets/img/cover-project.jpg" alt="" />
+			<img class="jarallax-img cover" src="assets/images/stats-banner.jpg" alt="" />
 		</figure>
 		<!-- /Image -->
         
@@ -111,9 +111,9 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">01 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">Research is to see what everybody else has seen, and to think what nobody else has thought</h2>
+			        <h2 class="title title--h4 js-lines"> Creating new benchmarks, reaching them and upping the bar every single time is our motto - because our clients love dedication, and we, our clients.</h2>
 				    <div class="description js-block">
-				        <p>It is our steadfast belief research forms the crux of every successful venture. We at Peer growth, take great care to ensure that in every endeavour that we undertake, however big or small, foolproof research forms the guidelines to ensure our goals are met.</p>
+				        <p> When we say research, we mean searching every nook and corner. From Business Analysis reports that give insights into market competition and providing bespoke solutions.</p>
 			        </div>
 			    </div>
 		    </div>
@@ -129,9 +129,9 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">02 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">When you believe a thing, believe it all the way, implicitly and unquestionably.</h2>
+			        <h2 class="title title--h4 js-lines">After all the end goal of research is not just results, but new knowledge!.</h2>
 				    <div class="description js-block">
-				        <p>Good designers must always be avant-gardists, always one step ahead of the times. They should–and must–question everything generally thought to be obvious. They must have an intuition for people’s changing attitudes. For the reality in which they live, for their dreams, their desires, their worries, their needs, their living habits. They must also be able to assess realistically the opportunities and bounds of technology.</p>
+				        <p>A dedicated research team, at PeerGrowth strives every single minute to deliver every customised need, across all our uniquely structured clientele. We do not bask until opportunities are created and instead plan way ahead and work closely with our clients to find their fit!</p>
 			        </div>
 			    </div>
 		    </div>
@@ -168,9 +168,9 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">03 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">Design is a solution to a problem. Art is a question to a problem.</h2>
+			        <h2 class="title title--h4 js-lines">we help every firm understand their status quo, and thereby assist in proceeding in a healthier direction</h2>
 				    <div class="description js-block">
-				        <p>The future belongs to a different kind of person with a different kind of mind: artists, inventors, storytellers-creative and holistic ‘right-brain’ thinkers whose abilities mark the fault line between who gets ahead and who doesn’t.</p>
+				        <p>Compensation Benchmarking reports where the client learns where they stand in the race of compensation mechanisms, to Diversity and Employment Engagement Studies where deeper insights into a comparison with the competition comes into play</p>
 			        </div>
 			    </div>
 		    </div>
