--- a/traininganddevelop.html
+++ b/traininganddevelop.html
@@ -71,8 +71,8 @@
 	    <header class="header-page header-page--half js-opacity">
 		    <div class="container">
 			    <!-- Title -->
-	            <h6 class="title title--overhead title--tail">What we do</h6>
-		        <h1 class="title title--display-1 js-words">Executive Search</h1>
+	            <h6 class="title title--overhead title--tail">Our Expertise</h6>
+		        <h1 class="title title--display-1 js-words">Training and Development</h1>
 			    <!-- /Title -->
 			</div>
 		</header>
@@ -80,7 +80,7 @@
 		
 		<!-- Image -->
 		<figure class="image-container jarallax reveal">
-			<img class="jarallax-img cover" src="assets/img/cover-project.jpg" alt="" />
+			<img class="jarallax-img cover" src="assets/images/training-banner.jpg" alt="" />
 		</figure>
 		<!-- /Image -->
         
@@ -111,9 +111,9 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">01 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">Research is to see what everybody else has seen, and to think what nobody else has thought</h2>
+			        <h2 class="title title--h4 js-lines">Improvement begins with I</h2>
 				    <div class="description js-block">
-				        <p>It is our steadfast belief research forms the crux of every successful venture. We at Peer growth, take great care to ensure that in every endeavour that we undertake, however big or small, foolproof research forms the guidelines to ensure our goals are met.</p>
+				        <p>We acknowledge the several gaps that exist in today’s world, that rise primarily due to insufficiency in training. However with the appropriate evaluation, with customised solutions, we bring in unparalleled modules that cater to every firm’s training and development needs. Our process not only involves creation of content and its delivery, but also post-delivery workshops for feedback & candidate assessments</p>
 			        </div>
 			    </div>
 		    </div>
@@ -129,9 +129,14 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">02 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">When you believe a thing, believe it all the way, implicitly and unquestionably.</h2>
+			        <h2 class="title title--h4 js-lines">What we offer</h2>
 				    <div class="description js-block">
-				        <p>Good designers must always be avant-gardists, always one step ahead of the times. They should–and must–question everything generally thought to be obvious. They must have an intuition for people’s changing attitudes. For the reality in which they live, for their dreams, their desires, their worries, their needs, their living habits. They must also be able to assess realistically the opportunities and bounds of technology.</p>
+				        <p><ul><li>Professional Training Skill</li>
+				        	<li>Leadership Coaching</li>
+				        	<li>Sales and Marketing Techniques</li>
+				        	<li>Communication Enhancement Workshops</li>
+				        	<li>Customer Service Timings</li>
+				        </ul></p>
 			        </div>
 			    </div>
 		    </div>
@@ -164,7 +169,7 @@
 		</div>
 		<!-- /Slider -->
 
-		<article class="caption-single container">
+		<!-- <article class="caption-single container">
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">03 —</span></div>
 			    <div class="col-12 col-lg-9">
@@ -174,12 +179,12 @@
 			        </div>
 			    </div>
 		    </div>
-		</article>
+		</article> -->
 		
 		<!-- Image -->
-		<figure class="image-container reveal">
+		<!-- <figure class="image-container reveal">
 			<img class="cover" src="assets/img/fullscreen_slider_image_03.jpg" alt="" />
-		</figure>
+		</figure> -->
 		<!-- /Image -->
 		
 		<div class="caption-single container">
