banner and content

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			                <h1 class="title title--display-1 js-text-wave">We are everywhere
 			                </h1>
 							
-				            <p class="description"><span class="down-up"><span>: Our global reach brings a pool of talent - an eclectic cohort of highly skilled, professional, talented and dependable individuals, from across the globe that can be the fresh breath of change an organisation is looking for!</span></span></p>
+				            <p class="description"><span class="down-up"><span>Our global reach brings a pool of talent - an eclectic cohort of highly skilled, professional, talented and dependable individuals, from across the globe that can be the fresh breath of change an organisation is looking for!</span></span></p>
                             <a class="btn-link btn-link--circle-right" href="photo_viewer.html"><span class="down-up"><span>See details<i class="circle circle--right icon-right-open"></i></span></span></a>
 						</div>
 					</div>
