--- a/traininganddevelop.html
+++ b/traininganddevelop.html
@@ -190,12 +190,12 @@
 		<div class="caption-single container">
 		    <div class="row">
 		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">AWWWARDS</h4>
-			        <div class="js-lines">Site of the Day — Dec 2017</div>
+		            <h4 class="title title--h6 js-lines">Closure Rate</h4>
+			        <div class="js-lines"> 97%-98%</div>
 		        </div>
 		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">CSSDesignAwards</h4>
-			        <div class="js-lines">Site of the Day — Dec 2017</div>
+		            <h4 class="title title--h6 js-lines">Huge array of partners</h4>
+			        <div class="js-lines">Exceeding 25+</div>
 		        </div>
 			</div>
 		</div>
