--- a/boardconsulting.html
+++ b/boardconsulting.html
@@ -111,7 +111,7 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">01 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">The board of every company is an invincible force to be reckoned with.</h2>
+			        <h2 class="title title--h4 js-lines">The board of every company is an invincible force to be reckoned with</h2>
 				    <div class="description js-block">
 				        <p> We at Peer Growth, not only acknowledge this importance, but have made several efforts to bring together leading Multinationals and Family Businesses across the globe, in order to assist in finding Independent and Non-Independent Directors.</p>
 			        </div>
@@ -168,7 +168,7 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">03 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">What we offer:</h2>
+			        <h2 class="title title--h4 js-lines">What we offer</h2>
 				    <div class="description js-block">
 				        <p><ul><li>Board Level Searches</li>
 				        	<li>Leadership Successions</li>
@@ -178,21 +178,17 @@
 		    </div>
 		</article>
 		
-		<!-- Image -->
-		<figure class="image-container reveal">
-			<img class="cover" src="assets/img/fullscreen_slider_image_03.jpg" alt="" />
-		</figure>
-		<!-- /Image -->
+		
 		
 		<div class="caption-single container">
 		    <div class="row">
 		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">AWWWARDS</h4>
-			        <div class="js-lines">Site of the Day — Dec 2017</div>
+		            <h4 class="title title--h6 js-lines">Closure Rate</h4>
+			        <div class="js-lines"> 97%-98%</div>
 		        </div>
 		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">CSSDesignAwards</h4>
-			        <div class="js-lines">Site of the Day — Dec 2017</div>
+		            <h4 class="title title--h6 js-lines">Huge array of partners</h4>
+			        <div class="js-lines">Exceeding 25+</div>
 		        </div>
 			</div>
 		</div>
