--- a/executive.html
+++ b/executive.html
@@ -129,7 +129,7 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">02 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines"> Behind all those computers, stand humans who make the firm a better place to work at!.</h2>
+			        <h2 class="title title--h4 js-lines"> Behind all those computers, stand humans who make the firm a better place to work at!</h2>
 				    <div class="description js-block">
 				        <p> Unlike the traditional ways of recruitment, we walk several extra miles to ensure that our core values reflect in our search and help churn out the perfect candidate for every organisation that there is.</p>
 			        </div>
@@ -168,7 +168,7 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">03 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines"> At Peergrowth, we specialise in Board & CEO/CXO level searches.</h2>
+			        <h2 class="title title--h4 js-lines"> At Peergrowth, we specialise in Board & CEO/CXO level searches</h2>
 				    <div class="description js-block">
 				        <p>Our trusted team of consultants work tirelessly to reach out to top performers across industries to understand their aspirations and what drives them as individuals. This first-hand knowledge helps us in aligning the interest of our candidates with what our clients have to offer, thereby making this process a breeze.</p>
 			        </div>
@@ -176,21 +176,18 @@
 		    </div>
 		</article>
 		
-		<!-- Image -->
-		<figure class="image-container reveal">
-			<img class="cover" src="assets/img/fullscreen_slider_image_03.jpg" alt="" />
-		</figure>
+		
 		<!-- /Image -->
 		
 		<div class="caption-single container">
 		    <div class="row">
 		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">AWWWARDS</h4>
-			        <div class="js-lines">Site of the Day — Dec 2017</div>
+		            <h4 class="title title--h6 js-lines">Closure Rate</h4>
+			        <div class="js-lines"> 97%-98%</div>
 		        </div>
 		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">CSSDesignAwards</h4>
-			        <div class="js-lines">Site of the Day — Dec 2017</div>
+		            <h4 class="title title--h6 js-lines">Huge array of partners</h4>
+			        <div class="js-lines">Exceeding 25+</div>
 		        </div>
 			</div>
 		</div>
