--- a/peergrowthresearchchronicle.html
+++ b/peergrowthresearchchronicle.html
@@ -111,7 +111,7 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">01 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines"> Creating new benchmarks, reaching them and upping the bar every single time is our motto - because our clients love dedication, and we, our clients.</h2>
+			        <h2 class="title title--h4 js-lines"> Creating new benchmarks, reaching them and upping the bar every single time is our motto - because our clients love dedication, and we, our clients</h2>
 				    <div class="description js-block">
 				        <p> When we say research, we mean searching every nook and corner. From Business Analysis reports that give insights into market competition and providing bespoke solutions.</p>
 			        </div>
@@ -129,7 +129,7 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">02 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines">After all the end goal of research is not just results, but new knowledge!.</h2>
+			        <h2 class="title title--h4 js-lines">After all the end goal of research is not just results, but new knowledge!</h2>
 				    <div class="description js-block">
 				        <p>A dedicated research team, at PeerGrowth strives every single minute to deliver every customised need, across all our uniquely structured clientele. We do not bask until opportunities are created and instead plan way ahead and work closely with our clients to find their fit!</p>
 			        </div>
@@ -170,27 +170,25 @@
 			    <div class="col-12 col-lg-9">
 			        <h2 class="title title--h4 js-lines">we help every firm understand their status quo, and thereby assist in proceeding in a healthier direction</h2>
 				    <div class="description js-block">
-				        <p>Compensation Benchmarking reports where the client learns where they stand in the race of compensation mechanisms, to Diversity and Employment Engagement Studies where deeper insights into a comparison with the competition comes into play</p>
+				        <p>Compensation Benchmarking reports where the client learns where they stand in the race of compensation mechanisms, to Diversity and Employment Engagement Studies where deeper insights into a comparison with the competition comes into play.</p>
 			        </div>
 			    </div>
 		    </div>
 		</article>
 		
 		<!-- Image -->
-		<figure class="image-container reveal">
-			<img class="cover" src="assets/img/fullscreen_slider_image_03.jpg" alt="" />
-		</figure>
+	
 		<!-- /Image -->
 		
 		<div class="caption-single container">
 		    <div class="row">
 		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">AWWWARDS</h4>
-			        <div class="js-lines">Site of the Day — Dec 2017</div>
+		            <h4 class="title title--h6 js-lines">Closure Rate</h4>
+			        <div class="js-lines"> 97%-98%</div>
 		        </div>
 		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">CSSDesignAwards</h4>
-			        <div class="js-lines">Site of the Day — Dec 2017</div>
+		            <h4 class="title title--h6 js-lines">Huge array of partners</h4>
+			        <div class="js-lines">Exceeding 25+</div>
 		        </div>
 			</div>
 		</div>
